@@ -1,3 +1,13 @@
+2008-11-26  Arek Korbik  <arkadini@gmail.com>
+
+	* conf/examples/default.xml:
+	* conf/examples/discont.xml:
+	* conf/examples/twores.xml:
+	Fix the wrong interpretation, introduced by r7619.
+	Eater names are defined by the component, and multiple eater tags
+	in a config file should only be used with multiple eaters.
+	See #1176.
+
 2008-11-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>
